public/stylesheets/styles.css
/* ... */
@media only screen and (min-width: 992px) {
  .bx-wrapper .bx-viewport {
    height: 600px !important;
  }
  .bx-wrapper .bx-pager.bx-default-pager a {
  	background: rgba(255,255,255,0.5);;
  	text-indent: -9999px;
  	display: block;
  	width: 15px;
  	height: 15px;
  	margin: 0 5px;
  	outline: 0;
  	-moz-border-radius: 50px;
  	-webkit-border-radius: 50px;
  	border-radius: 50px;
  }
  .slider-wrapper {
    margin-top: 0px;
  }
  .slide {
    height: 600px;
    width: 100%;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
  }
  iframe.iframe-video {
    height: 600px;
    width: 100%;
  }
  .bx-wrapper .bx-pager {
  	text-align: center;
  	font-size: .85em;
  	font-family: Arial;
  	font-weight: bold;
  	color: #666;
    margin-bottom: 31px;
  	z-index: 10;
  }
}
@media only screen and (min-width: 1200px) {}

/** Progress Bars **/
@media only screen and (min-width: 0) {
  .pro-v-wrapper {
    display: none;
    position: relative;
    height: 450px;
    width: 70px;
    margin-left: -4px;
    padding-bottom: 15px;
    z-index: 10;
  }
  .pro-v {
    position: absolute;
    overflow: hidden;
    height: 450px;
    width: 70px;
    bottom: 15px;
  }
  .pro-v-d {
    position: absolute;
    width: 70px;
    bottom: 15px;
    border-top: 2px solid #37474f;
  }
  .pro-v-text {
    margin: auto auto;
    color: #fff;
    font-size: 1.5em;
    z-index: 100;
  }
}
@media only screen and (min-width: 601px) {}
@media only screen and (min-width: 992px) {}
@media only screen and (min-width: 1200px) {}
/*6d6e70*/
/** Buy Box **/
@media only screen and (min-width: 0) {
  .mobile-buy {
    display: block;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    height: 62px;
    padding: 0 20px;
    border-top: 2px solid #fff;
    border-bottom: 2px solid #fff;
    font-size: 2em;
    z-index: 1000;
  }
  .btn-buy-mobile {
    height: auto;
    width: 120px !important;
    position: absolute;
    bottom: 5px;
    right: 20px;
  }
  .buy-box-wrapper {
    position: relative;
    height: 50px;
    line-height: 2.5;
    vertical-align: middle;
    width: 100%;
    background-color: #37474f;
    margin-top: -60px;
    padding: 0 10px;
    border-top: 2px solid #fff;
    border-bottom: 2px solid #fff;
    z-index: 10;
  }
  .buy-box-info {
    position: relative;
    border-top: 2px solid #37474f;
    border-bottom: 2px solid #b0bec5;
    padding: 20px;
  }
  .btn-buy-wrapper {
    margin-top: -20px;
    position: absolute;
    right: 20px;
  }
  .btn-buy {
    height: 100px;
    width: 100px;
  }
  .buy-box-footer {
    display: block;
    height: 50px;
    border-top: 2px solid #fff;
    border-bottom: 2px solid #fff;
    padding: 5px 20px 5px 20px;
  }
  .share-text {
    font-size: 1.4em;
  }
  img.social {
    height: 30px;
    width: 30px;
    margin: 4px 5px 0 5px;
    border-radius: 50%;
  }
  .brand-img {
    display: inline-block;
    height: 80px;
    width: 80px;
    bottom: 0px;
    margin-top: -15px;
    border: 2px solid #fff;
    border-radius: 50%;
    padding: 2px;
    background-color: rgba(96, 125, 139, .5);
    z-index: 10;
  }
  .item-name {
    display: inline-block;
    position: absolute;
    margin-left: 10px;
    font-size: 1.4em;
  }
  .item-price {
    display: inline-block;
    font-size: 0.95em;
    margin-top: -7px;
    padding-top: 0;
  }
  .item-price-o {
    text-decoration: line-through;
    font-size: 0.6em;
    margin-bottom: 0;
    padding-top: 0;
  }
  .item-info {
    text-align: justify;
    font-size: 1em;
  }
  .past-box-wrapper {
    height: 60px;
    line-height: 60px;
    vertical-align: middle;
    width: 100%;
    background-color: #37474f;
    padding: 0 20px;
    border-top: 2px solid #fff;
    border-bottom: 2px solid #fff;
    font-size: 2em;
  }
  .seemore {
    font-size: 0.6em !important;
  }
  .past-date-box {
    padding: 5px 20px;
    font-size: 1.4em;
  }
  /* custom card */
  .card .card-action.mod {
    padding: 10px 20px;
  }
  .past-price-o {
    display: inline-block;
    position: relative;
    font-size: 1em;
    text-decoration: line-through;
  }
  .past-price-n {
    font-size: 2.2em;
  }
  .past-buy-btn-a {
    margin-right: 0 !important;
  }
  .past-buy-btn {
    height: 70px;
    width: auto;
  }
  .past-info {
    height: 64px;
    font-size: 0.9em;
    padding-top: 7px;
  }
}
/* ... */

